# iroha2-block-explorer-backend

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  api.md  api.ts  build.rs
.github/workflows/: ci.yml  rust-clippy.yml
iroha_explorer_core/: Cargo.toml
iroha_explorer_core/src/: lib.rs  query.rs  state.rs  sync.rs
iroha_explorer_iroha_client/: Cargo.toml
iroha_explorer_iroha_client/src/: lib.rs
iroha_explorer_schema/: Cargo.toml
iroha_explorer_schema/src/: lib.rs  pagination.rs
iroha_explorer_telemetry/: Cargo.toml
iroha_explorer_telemetry/src/: blockchain.rs  lib.rs  peer_monitor.rs
iroha_explorer_test_utils/: Cargo.toml
iroha_explorer_test_utils/src/: blockchain.rs  lib.rs
src/: actor_test.rs  create_tables.sql  database_update.rs  dev_actor.rs  endpoint.rs  iroha.rs  iroha_client.rs  iroha_client_wrap.rs  main.rs  repo.rs  schema.rs  telemetry.rs  util.rs  web.rs
src/core/: mod.rs  query.rs  state.rs  storage.rs  sync.rs
src/repo/: create_tables.sql  from_iroha.rs  test-dump.sql  test_dump.sql  types.rs  util.rs
src/snapshots/: iroha_explorer__repo__tests__filter_isi_by_status.snap  iroha_explorer__repo__tests__find_an_asset.snap  iroha_explorer__repo__tests__list_accounts.snap  iroha_explorer__repo__tests__list_assets.snap  iroha_explorer__repo__tests__list_assets_definitions.snap  iroha_explorer__repo__tests__list_blocks-2.snap  iroha_explorer__repo__tests__list_blocks.snap  iroha_explorer__repo__tests__list_domains.snap  iroha_explorer__repo__tests__list_nfts.snap  iroha_explorer__repo__tests__list_txs.snap  iroha_explorer__schema__tests__serialize_unified_repr_int.snap  iroha_explorer__schema__tests__serialize_unified_repr_iroha.snap  iroha_explorer__schema__tests__serialize_unified_repr_str.snap  iroha_explorer__telemetry__state_tests__empty.snap  iroha_explorer__telemetry__state_tests__full_peer_update_cycle-2.snap  iroha_explorer__telemetry__state_tests__full_peer_update_cycle.snap
src/telemetry/: blockchain.rs  peer_monitor.rs
src/telemetry/snapshots/: iroha_explorer__telemetry__blockchain__tests__scan_test_repo.snap
src/web/: blocks.rs  etc.rs  mod.rs  pagination.rs  transactions.rs
tools/genesis-gen/: Cargo.toml  README.md
tools/genesis-gen/src/: gen.rs  main.rs
