[package]
name = "iroha_explorer"
description = "Backend API of Iroha 2 Explorer"
version = "0.2.0"
edition = "2021"

[dependencies]
iroha = { path = "../iroha/crates/iroha" }

tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
http = "1.3.1"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0"
url = "2.4.0"
axum = { version = "0.8.3", features = ["http2", "macros"] }
tokio = { version = "1.40.0", features = ["macros", "rt"] }
tower-http = { version = "0.6.2", features = ["trace"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "preserve_order", "preserve_path_order"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
nonzero_ext = "0.3.0"
serde_with = "3.9.0"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio", "chrono"] }
eyre = "0.6.12"
parity-scale-codec = "3.7.4"
base64 = "0.22.1"
futures-util = "0.3.30"
async-stream = "0.3.6"
derive_more = { version = "2.0.1", features = ["display", "from_str"] }
circular-buffer = "1.1.0"

[dev-dependencies]
insta = { version = "1.42.2", features = ["json", "csv"] }
expect-test = "1.5.0"
iroha_crypto = { path = "../iroha/crates/iroha_crypto", features = ["rand"] }
tokio = { version = "1", features = ["process"] }
reqwest = { version = "0.12.15", features = ["json"] }


