[package]
name = "iroha_explorer_schema"
version = "0.2.1"
edition = "2021"
description = "Explorer's HTTP API data types"

[dependencies]
iroha_explorer_test_utils = { path = "../iroha_explorer_test_utils/" }

chrono = { workspace = true }
derive_more = { workspace = true }
iroha_config = { workspace = true }
iroha_data_model = { workspace = true, features = ["transparent_api"] }
nonzero_ext = { workspace = true }
parity-scale-codec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }

base64 = "0.22.1"

[dev-dependencies]
expect-test = { workspace = true }
