[package]
name = "iroha_explorer_telemetry"
description = "Telemetry component of Explorer"
version = "0.2.1"
edition = "2021"

[dependencies]
iroha_explorer_schema = { path = "../iroha_explorer_schema/" }
iroha_explorer_test_utils = { path = "../iroha_explorer_test_utils/" }

iroha = { workspace = true }

eyre = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }

circular-buffer = "1.1.0"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }

[dev-dependencies]
expect-test = { workspace = true }
