[package]
name = "iroha_explorer_telemetry"
version = "0.2.1"
edition = "2021"
description = "Telemetry component of Explorer"

[dependencies]
iroha_explorer_schema = { path = "../iroha_explorer_schema/" }
iroha_explorer_test_utils = { path = "../iroha_explorer_test_utils/" }

iroha = { workspace = true }

async-stream = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

backoff = { version = "0.4.0", features = ["futures", "tokio"] }
circular-buffer = "1.1.0"

[dev-dependencies]
expect-test = { workspace = true }
