[package]
name = "genesis-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive", "env"] }
iroha_client        = { git = "https://github.com/hyperledger/iroha.git", rev = "75da907f66d5270f407a50e06bc76cec41d3d409" }
iroha_data_model    = { git = "https://github.com/hyperledger/iroha.git", rev = "75da907f66d5270f407a50e06bc76cec41d3d409" }
iroha_crypto        = { git = "https://github.com/hyperledger/iroha.git", rev = "75da907f66d5270f407a50e06bc76cec41d3d409" }
iroha_telemetry     = { git = "https://github.com/hyperledger/iroha.git", rev = "75da907f66d5270f407a50e06bc76cec41d3d409" }
iroha_core          = { git = "https://github.com/hyperledger/iroha.git", rev = "75da907f66d5270f407a50e06bc76cec41d3d409" }
color-eyre = "0.5"
serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"
faker_rand = "0.1"
petname = "1.1.2"
itertools = "0.10.3"

[dev-dependencies]
more-asserts = "0.2.2"
