[package]
name = "genesis-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
iroha_client = { workspace = true }
iroha_data_model = { workspace = true }
iroha_crypto = { workspace = true }
iroha_telemetry = { workspace = true }
iroha_core = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
faker_rand = { workspace = true }
petname = "1.1.2"
itertools = "0.10.3"

[dev-dependencies]
more-asserts = "0.2.2"